# ctp_trader

./: .gitignore  Makefile.am  README.md
ctpmini/: ThostFtdcTraderApi.h  ThostFtdcUserApiStruct.h
dfitc55/: DFITCSECApiDataType.h  DFITCSECApiStruct.h  DFITCSECMdApi.h  DFITCSECTraderApi.h
etc/: create.sql  testMduser.cfg  traderMduserSvr.cfg  traderStrategy.cfg
etherfabric/: ef_vi.h
femas/: USTPFtdcTraderApi.h  USTPFtdcUserApiDataType.h  USTPFtdcUserApiStruct.h
femas20/: USTPFtdcUserApiDataType.h  USTPFtdcUserApiStruct.h
femas304/: USTPFtdcTraderApi.h
ib/: CMakeLists.txt  Contract.h  DefaultEWrapper.cpp  EClient.cpp  EClient.h  EDecoder.cpp  EDecoder.h  EOrderDecoder.cpp  EOrderDecoder.h  EWrapper.h  EWrapper_prototypes.h  Order.h  Utils.cpp
rem/: EesTraderApi.h  EesTraderDefine.h  EesTraderErr.h
src/: CMakeLists.txt  make.env
src/api/: CMakeLists.txt  CtpMduserHandler.cpp  CtpMduserHandler.h  CtpTraderHandler.cpp  CtpTraderHandler.h  DFITCSECMduserHandler.cpp  DFITCSECMduserHandler.h  FemasAFMduserHandler.cpp  FemasAFMduserHandler.h  FemasAFTraderHandler.cpp  FemasAFTraderHandler.h  FemasMduserHandler.cpp  FemasMduserHandler.h  FemasTraderHandler.cpp  FemasTraderHandler.h  HxtsTraderHandler.cpp  HxtsTraderHandler.h  IBContractFactory.cpp  IBContractFactory.h  IBFutureContractFactory.cpp  IBFutureContractFactory.h  IBMduserApi.cpp  IBMduserApi.h  IBMduserHandler.cpp  IBMduserHandler.h  IBTraderApi.cpp  IBTraderApi.h  IBTraderApiBase.cpp  IBTraderApiBase.h  IBTraderHandler.cpp  IBTraderHandler.h  RemMduserHandler.cpp  RemMduserHandler.h  RemTraderHandler.cpp  RemTraderHandler.h  XSpeedMduserHandler.cpp  XSpeedMduserHandler.h  XSpeedTraderHandler.cpp  XSpeedTraderHandler.h  XeleTraderHandler.cpp  (+60 more)
src/cfg/: CMakeLists.txt  cmn_cfg.c  cmn_cfg.h  cupstype.h  glbProfile.c  glbProfile.h
src/client/: CMakeLists.txt  client_aud_cnn.c  client_aud_cnn.h  client_aud_pool.c  client_aud_pool.h  client_aud_svr.c  client_aud_svr.h
src/daemon/: CMakeLists.txt  trader_daemon.c  trader_daemon.h  trader_svr.c  trader_svr.h
src/data/: trader_md_data_svr.c  trader_md_data_svr.h
src/efvi/: CMakeLists.txt  efvi_receive_depend.cpp  efvi_receive_depend.h
src/log/: CMakeLists.txt  cmn_log.c  cmn_log.h  cmn_log_appender.c  cmn_log_appender.h  cmn_log_catalog.c  cmn_log_catalog.h  cmn_log_svr.c  cmn_log_svr.h  cmn_log_util.c  cmn_log_util.h  log_main.c
src/mysql/: stg_mysql_sys.c  stg_mysql_sys.h  stg_strategy_config.c  stg_strategy_instrument.c  stg_strategy_market_data_tick.c  stg_strategy_struct.h
src/proxy/: CMakeLists.txt  TraderMduserProxyCtp.cpp  TraderMduserProxyCtp.h  TraderMduserProxyEfvi.cpp  TraderMduserProxyEfvi.h  TraderMduserProxyExanic.cpp  TraderMduserProxyExanic.h  TraderMduserProxyExanicDaLian.cpp  TraderMduserProxyM2.cpp  TraderMduserProxyM2.h  TraderMduserProxyRem.cpp  TraderMduserProxyRem.h  TraderMduserProxyStruct.h  TraderMduserProxyUdp.cpp  TraderMduserProxyUdp.h  TraderMduserProxyUtil.cpp  TraderMduserProxyUtil.h
src/svc/: CMakeLists.txt  trader_mduser_boardcast.c  trader_mduser_boardcast.h  trader_mduser_cnn.c  trader_mduser_cnn.h  trader_mduser_shm.c  trader_mduser_shm.h  trader_mduser_shm_http.c  trader_mduser_shm_http.h  trader_mduser_svr.c  trader_mduser_svr.h
src/test/: CMakeLists.txt  CTPTest.cpp  CTPTest.h  CtpSopTest.cpp  CtpSopTest.h  FemasTraderChangePassword.cpp  FemasTraderChangePassword.h  XSpeedTest.cpp  XSpeedTest.h  XeleTest.cpp  XeleTest.h  ctp_api_test.cpp  ctp_get_mduser.c  test_stg.c  test_trader_db.c  test_trader_svr.c  trader_mduser_client_test.c  trader_mduser_client_test2.c  trader_mduser_shm_test.c
src/test/xele/: CXeleFtdcUserApiDataType.h
src/test2/: CMakeLists.txt  Femas20MduserTest.cpp  Femas20MduserTest.h  Femas20Test.cpp  Femas20Test.h  RemTest.cpp  RemTest.h
src/test2/ctp/: CMakeLists.txt  CtpMduserTest.cpp  CtpMduserTest.h  CtpTest.cpp  CtpTest.h
src/test2/ctpmini/: CMakeLists.txt  CtpMiniTest.cpp  CtpMiniTest.h
src/test2/ctpmini2/: ThostFtdcUserApiDataType.h
src/test2/ctpsop/: CMakeLists.txt  CtpSopMduserTest.cpp  CtpSopMduserTest.h  CtpSopTest.cpp  CtpSopTest.h
src/test2/femas/: CMakeLists.txt
src/test2/femas/femas/: USTPFtdcUserApiDataType.h  USTPFtdcUserApiStruct.h
src/test2/femas20/: CMakeLists.txt  Femas20Test.cpp  Femas20Test.h  FemasMduserTest.cpp  FemasMduserTest.h  MapTest.cpp  USTPFtdcUserApiStruct.h
src/test2/femas20/femas20/: USTPFtdcTraderApi.h
src/test2/femas302/: CMakeLists.txt
src/test2/femas304/: CMakeLists.txt
src/test2/femas305/: CMakeLists.txt
src/test2/hxts/: CMakeLists.txt  HxtsTest.cpp  HxtsTest.h  comm_client_if.h  comm_imp.cpp
src/test2/rem/: CMakeLists.txt  RemMduserTest.cpp  RemMduserTest.h  RemTest.cpp
src/test2/rem/rem/: EESQuoteApi.h  EesTraderApi.h  EesTraderErr.h
src/test2/rem5/: CMakeLists.txt  Rem5Test.cpp  Rem5Test.h
src/test2/xele/xele/: CXeleFtdcUserApiDataType.h  CXeleTraderApi.hpp
src/test2/yd/: CMakeLists.txt  YdTest.cpp  YdTest.h
src/trade/: CMakeLists.txt  trader_db.c  trader_db.h  trader_export.c  trader_mduser_client.c  trader_mduser_client.h  trader_msg_struct.h  trader_strategy.c  trader_strategy.h  trader_strategy_engine.c  trader_strategy_engine.h  trader_strategy_imp.c  trader_strategy_limit.c  trader_strategy_limit.h  trader_strategy_position_svr.c  trader_strategy_position_svr.h  trader_strategy_processor.c  trader_strategy_processor.h  trader_svr.c  trader_svr.h
src/udp/: CMakeLists.txt  cffex_unmask.cpp  trader_mduser_api_ef_vi.h  trader_mduser_api_ef_vi_imp.cpp
src/util/: CMakeLists.txt  cmn_util.c  cmn_util.h  dict.c  dict.h  evmqueue.c  evmqueue.h  mqueue_client.cpp  mqueue_client.h  trader_ipdata_dump.c  trader_ipdata_dump.h  trader_mduser_record.c  trader_mduser_record.h  trader_mduser_shm.h  trader_tick_dict.c  trader_tick_dict.h
src/xele/: CFairMsgRecv.cpp  CFairMsgRecv.h  CMakeLists.txt  CXeleFairApiStruct.h  MessageDefine.h  XeleTraderOrderApi.h  XeleTraderOrderApiImp.cpp  XeleTraderOrderApiImp.h  common.cpp  common.h  fair.h  fair_define.h  fair_message.cpp  fair_message.h  rtn_result.h  utils.h  version.h
(+14 files in other folders)
